# VidScribe

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  main.py
app/api/: routes.py
app/core/: celery_app.py  config.py  database.py  enums.py  errors.py  logging.py
app/models/: __init__.py  job.py
app/prompts/: writing_style.md
app/schemas/: common.py  requests.py  responses.py
app/services/: article_writer.py  audio_extractor.py  cover_prompt_generator.py  input_resolver.py  job_artifact_manager.py  job_service.py  llm_client.py  pipeline.py  prompt_loader.py  result_exporter.py  summarizer.py  transcriber.py  transcript_cleaner.py  video_downloader.py
app/tasks/: jobs.py
app/utils/: files.py
app/web/: __init__.py  home_page.py
app/web/static/: home.css  home.js
app/web/templates/: home.html
sample_data/: analyze_text_request.json  create_job_request.json
scripts/: activate_local_tools.sh  check_llm.py  seed_examples.py
tests/: conftest.py  test_analyze_text.py  test_analyze_video.py  test_douyin_probe.py  test_health.py  test_home_page.py  test_jobs.py  test_llm_client.py  test_pipeline.py  test_prompt_style.py  test_schemas.py  test_transcript_cleaner.py
